fix visual overflow bug

--- a/src/assets/scss/Contacts.module.scss
+++ b/src/assets/scss/Contacts.module.scss
@@ -90,8 +90,8 @@ ul {
   background-color: #fff;
   border-right: 1px solid #dee2e6;
   height: 100vh;
-  max-width: 460px;
-  min-width: 460px;
+  min-width: 30%;
+  max-width: 400px;
   z-index: 1;
   overflow: scroll;
   overflow-x: hidden;
