--- a/src/assets/scss/Funds.module.scss
+++ b/src/assets/scss/Funds.module.scss
@@ -2,16 +2,16 @@
   background-color: #fff;
   border-right: 1px solid #dee2e6;
   height: 100vh;
-  max-width: 460px;
-  min-width: 460px;
   z-index: 1;
   overflow: scroll;
   overflow-x: hidden;
+  min-width: 30%;
+  max-width: 400px;
 }
 
 .detail-panel {
   flex: 2;
-  width: 100%;
+  width: 60%;
   padding: 20px;
   background: #ffffff;
 }
@@ -53,7 +53,7 @@
       justify-content: center;
       align-items: center;
       border-right: 1px solid #dee2e6;
-      padding: 15px 20px;
+      padding: 0.5rem 0.5rem;
       text-align: center;
       flex: 1;
 
