--- a/src/assets/scss/InlineModalLayout.module.scss
+++ b/src/assets/scss/InlineModalLayout.module.scss
@@ -1,5 +1,5 @@
 .inline-modal-layout {
-  display: flex;
+  display: block;
 }
 
 @media (max-width: 768px) {
