--- a/src/assets/scss/Routes.module.scss
+++ b/src/assets/scss/Routes.module.scss
@@ -18,4 +18,5 @@
 
 .page-content {
   flex-grow: 1;
+  max-width: calc(100% - 80px);
 }
