--- a/src/assets/scss/pages/FundDetail.module.scss
+++ b/src/assets/scss/pages/FundDetail.module.scss
@@ -2,9 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 50px;
-  width: 100%;
   position: relative;
-  max-width: 1200px;
 }
 
 .container {
